--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-responsive": "^9.0.0-beta.3",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
@@ -43,6 +44,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "customize-cra": "^1.0.0",
+    "gh-pages": "^3.2.3",
+    "react-app-rewired": "^2.1.8"
   }
 }
